# todo_backend_rust

./: .env  Cargo.toml
db_init/: init.sql  users.sql
src/: lib.rs  main.rs
src/entity/: mod.rs  prelude.rs  todo.rs  users.rs
src/routes/: mod.rs  users.rs
src/utils/: constants.rs  guards.rs  jwt.rs  mod.rs
