[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
validator = { version = "0.16.1", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }