[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
validator = { version = "0.16.1", features = ["derive"] }
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
log = "0.4.20"
serde_with = "3.6.0"
chrono = { version = "0.4.33", features = ["serde"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
serde_json = "1.0.113"
